# django-simulation-project-faker-test

./: project_structure  pyproject.toml  settings.py
apps/com_simulation/: __init__.py  apps.py  exceptions.py  models.py  serializers.py  services.py  simulator.py  tasks.py  views.py
apps/core/: __init__.py  apps.py  auth.py  cache.py  decorators.py  exceptions.py  export_service.py  exporters.py  file_processor_factory.py  file_processors.py  file_service.py  middleware.py  models.py  monitoring.py  serializers.py  services.py  storage.py  storage_factory.py  tasks.py  views.py
apps/core/storage/: base.py  local.py  manager.py  s3.py
apps/file_management/: __init__.py  apps.py  exceptions.py  models.py  serializers.py  services.py  validators.py  views.py
apps/parameter_processing/: __init__.py  apps.py  exceptions.py  models.py  processors.py  serializers.py  services.py  views.py
collections/: models.py
com_simulation/: models.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  common.py
core/: logging.py  middleware.py
files/: models.py
fom_chi/: models.py
frontend/: package.json
frontend/src/types/: file.ts  parameter.ts  simulation.ts
permissions/: permissions.py
s_parameters/: models.py  views.py
serder_simulation/: models.py
si_tools_test/: asgi.py  settings.py  urls.py  wsgi.py
test/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/test_apps/: test_com_simulation.py  test_file_management.py  test_parameter_processing.py  test_tasks.py
users/: models.py
validators/: validators.py
